--- a/css/css1.css
+++ b/css/css1.css
@@ -3,6 +3,7 @@ body{
   background-color: #e6dacf;
   background: -moz-linear-gradient(top, #1e8449 0%, #000000 75%);
   background: -webkit-linear-gradient(#1e8449  0%, #000000 75%);
+  background: -o-linear-gradient(#1e8449  0%, #000000 75%);
 }
 
 header{
@@ -96,13 +97,36 @@ footer p{
   padding: 5px;
   border-radius: 10px;
   background-color: rgba(200, 200, 200, 0.3);
+  margin: 20px;
+}
+
+div{
+  clear: both;
+  background-color: rgba(200, 200, 200, 0.3);
+  border-radius: 10px;
+  padding: 5px;
+  margin: 20px
+}
+.animate img{
+  width: 15%;
+  margin: 10px;
+  vertical-align: middle;
+  -webkit-transition:-webkit-transform 1s,opacity 1s,background 1s,width 1s,height 1s,font-size 1s;
+  -webkit-border-radius: 5px;
+  -o-transition-duration:1s,1s,1s,1s,1s,1s;
+  transition-duration:1s,1s,1s,1s,1s,1s;
+  border-radius: 5px;
+}
+
+.animate img:hover{
+  width: 20%;
 }
 
 progress[value]{
   background-color: #10ff10;
 }
 
-img{
+footer img{
   width: 10%;
 }
 
@@ -111,6 +135,12 @@ header, footer{
   background: #000000;
   background: -moz-linear-gradient(top, #1e8449 0%, #000000 75%);
   background: -webkit-linear-gradient(#1e8449  0%, #000000 75%);
+  background: -o-linear-gradient(#1e8449  0%, #000000 75%);
   background-image: url('../img/tropical2.jpg');
-  background-size: cover;
+  background-size: 110%;
+  background-position: center;
+}
+
+details > p{
+  color: blue;
 }
